syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "github.com/nuzur/nem";
option java_outer_classname = "FieldTypePhoneConfig";

package nem;



message FieldTypePhoneConfig {  
    repeated string allow_countries = 1;
    repeated string exclude_countries = 2;    
}
